--- a/style.css
+++ b/style.css
@@ -15,3 +15,16 @@ h1 {
   text-align: center;
   line-height: 100vh;
 }
+
+span {
+  opacity: 0;
+  transition: all .7s ease;
+  transform: translateY(50px);
+  display: inline-block;
+}
+
+span.fade {
+  color: #dcdf239d;
+  opacity: 1;
+  transform: translateY(0px);
+}
